# pyhunter3

./: .gitignore  README.md  build.sh  pyhunter.py  pyproject.toml  requirements.txt  setup.py
docs/: _config.yml  index.md  installation.md  setup_docs.py  usage.md
modules/: feroxbuster.go  ffuf.go  nmap.go  rustytoken.go  sqlmap.go  whatweb.go
pyhunter/: README.md  requirements.txt
pyhunter/modules/: gowitness.go  hydra.go  nikto.go  nuclei.go  subfinder.go  wapiti.go
