[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhunter3"
version = "0.1.0" 
description = "A tool for testing web applications"
readme = "README.md"
homepage = "https://github.com/mavedirra-01/pyhunter3"
keywords = ["web", "testing", "security"] 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
paramiko = "*"
colorama = "*"
